--- a/109356003_OOP_Exam1/.project
+++ b/109356003_OOP_Exam1/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>109356003_OOP_Exam1</name>
+	<name>109356003_OOPI_Exam1</name>
 	<comment></comment>
 	<projects>
 	</projects>
